# bibliometria-turismo-multivariado

./: .gitignore  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt
data/: glosario_columnas_wos.txt
docs/: api.md  architecture.md  cli.md  configuration.md  index.md  installation.md  methodology.md  results.md
docs/nice_to_do/: Topic_modelling.md  vault_article_nodes.md
quarto/: 01_datos.qmd  02_coocurrencia.qmd  03_comunidades.qmd  04_centralidades.qmd  05_reduccion_dim.qmd  06_evolucion.qmd  _quarto.yml  about.qmd  coocurrence_pyvis.html  index.qmd  styles.css
src/co_occurrence/: __init__.py  __main__.py  cli.py  config.py  obsidian.py  synonyms.py
vault_bibliometria/: _INDEX.md
vault_bibliometria/.obsidian/: graph.json  workspace.json
vault_bibliometria/authors/: Aballéa, S.md  Abbate, JL.md  Abd El Bakey, SM.md  Abdennour, MA.md  Abiola-Oke, E.md  Abrantes, JL.md  Abreu, LM.md  Abuhashesh, M.md  Adhi, KT.md  Adil, M.md  Adongo, CA.md  Agarwal, S.md  Agbabiaka, HI.md  Aggarwal, G.md  Aggarwal, S.md  AghaKouchak, A.md  Agoubi, B.md  Ahmad, M.md  Ahmad, T.md  Akadiri, AC.md  Akadiri, SS.md  Akdag, G.md  Akdamar, E.md  Akkaya, MA.md  Alam, M.md  Alexopoulos, JD.md  Ali, A.md  Aliseda, JM.md  Allen, D.md  Aller, SA.md  Alleyne, LD.md  Almeida, A.md  Alola, UV.md  Alonso, GC.md  Alonso, JAV.md  Alperin, M.md  Altinay, L.md  Alvarez-Gálvez, J.md  Alén, E.md  Amaro, S.md  (+1104 more)
vault_bibliometria/communities/: COVID-19, Sustainability & Intentions.md  Macroeconomics & Causality.md  Multivariate Analysis & Clustering.md  QCA & Methodological Diversity.md  Regression, PCA & Scaling.md  SEM & Behavioral Models.md  Time Series & Forecasting.md
vault_bibliometria/journals/: 11TH INTERNATIONAL DAYS OF STATISTICS AND ECONOMICS.md  11TH INTERNATIONAL SCIENTIFIC SYMPOSIUM REGION, ENTREPRENEURSHIP, DEVELOPMENT (RED 2022).md  1ST UPI INTERNATIONAL GEOGRAPHY SEMINAR 2017.md  2017 IEEE 2ND INTERNATIONAL CONFERENCE ON BIG DATA ANALYSIS (ICBDA).md  2022 IEEE 6TH ADVANCED INFORMATION TECHNOLOGY, ELECTRONIC AND AUTOMATION CONTROL CONFERENCE (IAEAC).md  21ST AMSE- APPLICATIONS OF MATHEMATICS AND STATISTICS IN ECONOMICS.md  37TH INTERNATIONAL CONFERENCE ON MATHEMATICAL METHODS IN ECONOMICS 2019.md  4TH INTERNATIONAL SCIENTIFIC CONFERENCE- TOSEE - TOURISM IN SOUTHERN AND EASTERN EUROPE 2017.md  8TH INTERNATIONAL SCIENTIFIC SYMPOSIUM ECONOMY OF EASTERN CROATIA - VISION AND GROWTH.md  AGRICULTURAL SYSTEMS.md  AMBIO.md  ANAIS BRASILEIROS DE ESTUDOS TURISTICOS-ABET.md  ANATOLIA-INTERNATIONAL JOURNAL OF TOURISM AND HOSPITALITY RESEARCH.md  ANNALS OF MEDICINE.md  ANNALS OF OPERATIONS RESEARCH.md  ANNALS OF TOURISM RESEARCH.md  APPLIED ECOLOGY AND ENVIRONMENTAL RESEARCH.md  APPLIED GEOGRAPHY.md  APPLIED MATHEMATICS AND NONLINEAR SCIENCES.md  APPLIED WATER SCIENCE.md  ARABIAN JOURNAL OF GEOSCIENCES.md  ARGUMENTA OECONOMICA.md  ASIA PACIFIC JOURNAL OF TOURISM RESEARCH.md  BIODIVERSITY AND CONSERVATION.md  BMJ GLOBAL HEALTH.md  BOLETIN DE LA ASOCIACION DE GEOGRAFOS ESPANOLES.md  BRITISH FOOD JOURNAL.md  BUILDINGS.md  BULLETIN OF ENVIRONMENTAL CONTAMINATION AND TOXICOLOGY.md  BULLETIN OF GEOGRAPHY-SOCIO-ECONOMIC SERIES.md  CHINESE ECONOMY.md  CHINESE GEOGRAPHICAL SCIENCE.md  CONSERVATION PHYSIOLOGY.md  (+195 more)
(+149 files in other folders)
